Fix too-wide sidebar in narrow screen
Fix too-wide sidebar in narrow screen, causing cannot tap-to-close.

min-width: max-content; would cause the sidebar won't wrap texts in narrow
screens.

Also fix the sidebar became too narrow if the texts in sidebar are too short.

Bug: #44

--- a/resources/skin.less
+++ b/resources/skin.less
@@ -369,14 +369,14 @@ p {
   position: fixed;
   left: 0;
   top: 0;
-  width: 30%;
+  width: max-content;
   bottom: 0;
   background: @background-color-toggle-list;
   z-index: 13;
   height: 100%;
   overflow-y: auto;
-  min-width: max-content;
-  max-width: 500px;
+  min-width: ~"max( 224px, 30% )";
+  max-width: ~"min( calc( 100% - 80px ), 500px )";
   transform: translateX( -100% );
   transition: cubic-bezier( 0.4, 0, 0.2, 1 ) 0.2s transform;
 
